erm corrected grammar...

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="box">
-  <p>This is a Parallax Website! It's just a tree. Its fun.</p>
+  <p>This is a Parallax Website! It's just a tree. It's fun.</p>
 
 </div>
 
